if(PRD_ARCHIVE_SUPPORT)
	add_subdirectory(7z)
	if (NOT MINIZIP_FOUND)
		add_subdirectory(minizip)
	endif()
endif()
add_subdirectory(md5)
add_subdirectory(bencode)
add_subdirectory(sha1)
if (NOT Libgit2_FOUND)
	set(ENABLE_TRACE FALSE)
	set(USE_HTTPS FALSE)
	set(USE_SSH FALSE)
	set(USE_NTLMCLIENT FALSE)
	set(BUILD_SHARED_LIBS FALSE)

	add_subdirectory(libgit2)
endif()
