if(PRD_ARCHIVE_SUPPORT)
	add_subdirectory(7z)
	if (NOT MINIZIP_FOUND)
		add_subdirectory(minizip)
	endif()
endif()
add_subdirectory(md5)
add_subdirectory(bencode)
add_subdirectory(sha1)
if (NOT Libgit2_FOUND)
	set(ENABLE_TRACE FALSE CACHE BOOL "" FORCE)
	set(USE_HTTPS FALSE CACHE BOOL "" FORCE)
	set(USE_SSH FALSE CACHE BOOL "" FORCE)
	set(USE_NTLMCLIENT FALSE CACHE BOOL "" FORCE)
	set(BUILD_SHARED_LIBS FALSE CACHE BOOL "" FORCE)
	set(BUILD_CLAR FALSE CACHE BOOL "" FORCE)

	add_subdirectory(libgit2)
endif()
